# nlp-parser

./: README.md  memo  nlp-parser.cabal
app/: Main.hs
src/: CKY.hs  MyLib.hs
test/: Test.hs
