cabal-version:      2.4
name:               nlp-parser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kentarow10
maintainer:         kenfan.fun@icloud.com

-- A copyright notice.
-- copyright:
-- category:
library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    other-modules:    CKY
                      
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
                    base ^>=4.14.3.0
                    -- , containers >= 0.5.9
                    , parsec
                    , array
    hs-source-dirs:   src
    default-language: Haskell2010

executable nlp-parser
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
        , nlp-parser
        , parsec

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite nlp-parser-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
                      , src
    main-is:          Test.hs
    build-depends:    base ^>=4.14.3.0
                      , hspec >= 1.3
                      , QuickCheck
                      , nlp-parser
                      , parsec
                      , array